modified tox docs env

--- a/tox.ini
+++ b/tox.ini
@@ -38,7 +38,10 @@ commands = python setup.py sdist check --strict --metadata
 deps = sphinx
        sphinx_rtd_theme
 basepython = python3.6
-commands = microstructpy examples/*.xml
+skip_install = true
+commands = pip install pybind11
+           pip install -e .
+           microstructpy examples/*.xml
            python examples/docs_banner.py
            python examples/from_image.py
            python examples/grain_neighborhoods.py
