more fixes for gallery

--- a/tox.ini
+++ b/tox.ini
@@ -36,23 +36,7 @@ commands = python setup.py sdist check --strict --metadata
 
 [testenv:docs]
 deps = sphinx
-       sphinx_rtd_theme
-basepython = python3.6
-skip_install = true
-commands = pip install pybind11
-           pip install -e .
-           microstructpy examples/*.xml
-           python examples/docs_banner.py
-           python examples/from_image.py
-           python examples/grain_neighborhoods.py
-           python examples/standard_voronoi.py
-           python examples/uniform_seeding.py
-           sphinx-apidoc -M -e -o docs/source/ src/microstructpy
-           sphinx-build docs/source/ docs/build/
-
-
-[testenv:docs-fast]
-deps = sphinx
+       sphinx-gallery
 basepython = python3.6
 commands = sphinx-apidoc -M -e -o docs/source/ src/microstructpy
            sphinx-build docs/source/ docs/build/
