--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,6 +4,9 @@
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-  version: 3.7
-  install:
-    - requirements: rtd_reqs.txt
+   version: 3.7
+   install:
+      - method: pip
+        path: .
+        extra_requirements:
+           - sphinx_gallery
