--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,11 +2,13 @@
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
-# Optionally set the version of Python and requirements required to build your docs
+version: 2
+
+sphinx:
+  configuration: docs/conf.py
+
 python:
    version: 3.7
    install:
       - method: pip
         path: .
-        extra_requirements:
-           - sphinx_gallery
