--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -16,5 +16,6 @@ prune docs/source/_static
 prune docs/build
 prune tests/tmp_out
 prune examples/*
+prune *.yml
 
 global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store *.log Icon*
