updated API docs, removed sphinx-apidoc output

--- a/tox.ini
+++ b/tox.ini
@@ -38,5 +38,4 @@ commands = python setup.py sdist check --strict --metadata
 deps = sphinx
        sphinx-gallery
 basepython = python3.6
-commands = sphinx-apidoc -M -e -o docs/source/ src/microstructpy
-           sphinx-build docs/source/ docs/build/
+commands = sphinx-build docs/source/ docs/build/
