added PDF build to tox docs env

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 ###############################################################################
 test_reports/
 .vscode/
+docs/build-pdf/
 
 ###############################################################################
 #                                                                             #
