--- a/tox.ini
+++ b/tox.ini
@@ -39,3 +39,4 @@ deps = sphinx
        sphinx-gallery
 basepython = python3.6
 commands = sphinx-build docs/source/ docs/build/
+           sphinx-build -b latex docs/source/ docs/build-pdf/
