began fixing sphinx nit-picks

--- a/tox.ini
+++ b/tox.ini
@@ -40,3 +40,10 @@ deps = sphinx
 basepython = python3.6
 commands = sphinx-build docs/source/ docs/build/
            sphinx-build -b latex docs/source/ docs/build-pdf/
+
+
+[testenv:docs-s]
+deps = sphinx
+       sphinx-gallery
+basepython = python3.6
+commands = sphinx-build -Wn docs/source/ docs/build/
