renamed docs dev env, moved PDF build, added epub

--- a/tox.ini
+++ b/tox.ini
@@ -39,11 +39,12 @@ deps = sphinx
        sphinx-gallery
 basepython = python3.6
 commands = sphinx-build docs/source/ docs/build/
-           sphinx-build -b latex docs/source/ docs/build-pdf/
 
 
-[testenv:docs-s]
+[testenv:docs-dev]
 deps = sphinx
        sphinx-gallery
 basepython = python3.6
 commands = sphinx-build -Wn docs/source/ docs/build/
+           sphinx-build -b latex docs/source/ docs/build-pdf/
+           sphinx-build -b epub docs/source/ docs/build-epub/
