--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 ###############################################################################
 test_reports/
 .vscode/
-docs/build-pdf/
+docs/build*/
 
 ###############################################################################
 #                                                                             #
