reconfigured plotting/showing examples

--- a/tox.ini
+++ b/tox.ini
@@ -35,15 +35,13 @@ commands = python setup.py sdist check --strict --metadata
            twine check dist/*
 
 [testenv:docs]
-deps = sphinx
-       sphinx-gallery
+deps = -rdocs/requirements.txt
 basepython = python3.6
 commands = sphinx-build docs/source/ docs/build/
 
 
 [testenv:docs-dev]
-deps = sphinx
-       sphinx-gallery
+deps = -rdocs/requirements.txt
 basepython = python3.6
 commands = sphinx-build -Wn docs/source/ docs/build/
            sphinx-build -b latex docs/source/ docs/build-pdf/
