--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - 3.5
   - 3.6
   - 3.7
-  - 3.8
+  - 3.8-dev
 install:
   - pip install -U pytest pytest-cov coveralls
   - pip install -e .
