--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -16,11 +16,12 @@ include tox.ini
 prune docs/source/auto_examples
 prune docs/build*
 prune tests/tmp_out
+prune test_reports
 prune examples/*
-prune *.yml
 
 exclude examples/*.png
 include examples/aluminum_micro.png
 exclude examples/*.txt
+exclude *.yml
 
 global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store *.log Icon*
