copied ellipses.py from source, best_fit method calls this module instead
Source: https://github.com/bdhammel/least-squares-ellipse-fitting

--- a/tox.ini
+++ b/tox.ini
@@ -32,8 +32,8 @@ deps = docutils
 skip_install = true
 commands = python setup.py sdist check --strict --metadata
            check-manifest {toxinidir}
-           flake8 src tests setup.py --exclude=__init__.py
-           isort --verbose --check-only --diff --recursive src tests setup.py
+           flake8 src tests setup.py --exclude=__init__.py,src/microstructpy/geometry/ellipses.py
+           isort --verbose --check-only --diff --recursive src tests setup.py --skip src/microstructpy/geometry/ellipses.py
            twine check dist/*
 
 [testenv:docs]
