--- a/.coveragerc
+++ b/.coveragerc
@@ -3,3 +3,4 @@ omit =
     src/microstructpy/cli.py
     src/microstructpy/__init__.py
     src/microstructpy/*/__init__.py
+    src/microstructpy/geometry/ellipses.py
