--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -34,5 +34,5 @@ steps:
 
 - script: |
     pip install pytest pytest-azurepipelines pytest-cov
-    pytest
+    pytest --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
   displayName: 'pytest'
