--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -34,5 +34,17 @@ steps:
 
 - script: |
     pip install pytest pytest-azurepipelines pytest-cov
-    pytest --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+    pytest --junitxml=junit/test-results.xml --cov=src/microstructpy --cov-report=xml --cov-report=html
   displayName: 'pytest'
+
+- task: PublishTestResults@2
+  condition: succeededOrFailed()
+  inputs:
+    testResultsFiles: '$(System.DefaultWorkingDirectory)/**/junit/test-*.xml'
+    testRunTitle: 'Publish test results for Python $(python.version)'
+
+- task: PublishCodeCoverageResults@1
+  inputs:
+    codeCoverageTool: Cobertura
+    summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
+    reportDirectory: '$(System.DefaultWorkingDirectory)/**/htmlcov'
