--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = check,
+envlist = clean,
+          check,
           py27,
           py36,
           py37
@@ -12,11 +13,18 @@ envlist = check,
 
 [testenv]
 deps = pytest
-       pytest-html
-       pytest-cov
 setenv = MPLBACKEND = agg
 commands =
-    pytest --html=test_reports/results/{envname}.html --cov-report=html:test_reports/coverage/{envname}
+    pytest
+
+[testenv:cov]
+deps = pytest
+       pytest-cov
+basepython = python3.6
+usedevelop = True
+setenv = MPLBACKEND = agg
+commands =
+    pytest --cov src/microstructpy --cov-report=html --cov-branch
 
 [testenv:check]
 deps = docutils
@@ -46,3 +54,8 @@ basepython = python3.6
 commands = sphinx-build -Wn docs/source/ docs/build/
            sphinx-build -b latex docs/source/ docs/build-pdf/
            sphinx-build -b epub docs/source/ docs/build-epub/
+
+[testenv:clean]
+deps = coverage
+skip_install = true
+commands = coverage erase
