split check env, updated docs env

--- a/tox.ini
+++ b/tox.ini
@@ -5,13 +5,14 @@
 
 [tox]
 envlist = clean,
-          check,
+          static_analysis,
           py27,
-          py35
+          py35,
           py36,
           py37,
-          py38,
-          docs
+          cov,
+          docs,
+          release_check
 
 [testenv]
 deps = pytest
@@ -28,32 +29,27 @@ setenv = MPLBACKEND = agg
 commands =
     pytest --cov src/microstructpy --cov-report=html --cov-branch
 
-[testenv:check]
-deps = docutils
-       check-manifest
-       flake8
-       readme-renderer
-       pygments
+
+[testenv:static_analysis]
+deps = flake8
+       safety
        isort
+commands = flake8 src tests setup.py --exclude=__init__.py,src/microstructpy/geometry/ellipses.py
+           safety check
+           isort --verbose --check-only --diff --recursive src tests setup.py --skip src/microstructpy/geometry/ellipses.py
+
+[testenv:release_check]
+deps = check-manifest
        twine
-       readme_renderer[md]
 skip_install = true
 commands = python setup.py sdist check --strict --metadata
            check-manifest {toxinidir}
-           flake8 src tests setup.py --exclude=__init__.py,src/microstructpy/geometry/ellipses.py
-           isort --verbose --check-only --diff --recursive src tests setup.py --skip src/microstructpy/geometry/ellipses.py
            twine check dist/*
 
 [testenv:docs]
 deps = -rdocs/requirements.txt
 basepython = python3.6
-commands = sphinx-build docs/source/ docs/build/
-
-
-[testenv:docs-dev]
-deps = -rdocs/requirements.txt
-basepython = python3.6
-commands = sphinx-build -Wn docs/source/ docs/build/
+commands = sphinx-build -b html -Wn docs/source/ docs/build-html/
            sphinx-build -b latex docs/source/ docs/build-pdf/
            sphinx-build -b epub docs/source/ docs/build-epub/
 
