returned coverage reporting to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ install:
   - pip install -U pytest pytest-cov coveralls
   - pip install -e .
 script:
-  - pytest
+  - pytest --cov=src/microstructpy --cov-branch
 after_success:
   - coveralls
