added coveralls env variable to merge results
Based on: https://coveralls-python.readthedocs.io/en/latest/usage/configuration.html

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
   - 3.7
 env:
   - MPLBACKEND=Agg
+  - COVERALLS_PARALLEL=true coveralls
 install:
   - pip install -U pytest pytest-cov coveralls
   - pip install -e .
