removed coveralls call from env variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - 3.6
   - 3.7
 env:
-  - MPLBACKEND=Agg COVERALLS_PARALLEL=true coveralls
+  - MPLBACKEND=Agg COVERALLS_PARALLEL=true
 install:
   - pip install -U pytest pytest-cov coveralls
   - pip install -e .
