--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
 
 - script: |
     pip install pytest pytest-azurepipelines pytest-cov
-    pytest --junitxml=junit/test-results.xml --cov=src/microstructpy --cov-report=xml --cov-report=html --cov-branch
+    pytest --junitxml=junit/test-results.xml --cov=src/microstructpy --cov-report=xml --cov-branch
   displayName: 'pytest'
 
 - task: PublishTestResults@2
