--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 test_reports/
 .vscode/
 docs/build*/
+junit/
 
 ###############################################################################
 #                                                                             #
