created NOSA-compliant project
Replaces license with NOSA v1.3, replaces ellipse-fitting code in violation of 3.G with alternative, and prevents ellipse-fitting merges from altering the code

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 ###############################################################################
 #                                                                             #
+# BRANCH-SPECIFIC .GITIGNORE                                                  #
+#                                                                             #
+###############################################################################
+src/microstructpy/geometry/ellipses.py
+
+###############################################################################
+#                                                                             #
 # PROJECT-SPECIFIC .GITIGNORE                                                 #
 #                                                                             #
 ###############################################################################
