--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -13,15 +13,17 @@ include README.rst
 include tox.ini
 include requirements.txt
 
+prune .github
 prune docs/source/auto_examples
 prune docs/build*
 prune src/*/examples/*
+prune src/*.egg-info
 prune tests/tmp_out
-prune *.yml
 
-exclude examples/*.png
-include examples/aluminum_micro.png
-exclude examples/*.txt
+exclude *.*
+exclude src/*/examples/*.png
+include src/microstructpy/examples/aluminum_micro.png
+exclude src/*/examples/*.txt
 exclude src/*/examples/.gitignore
 
 global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store *.log Icon*
