--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -20,7 +20,7 @@ prune src/*/examples/*
 prune src/*.egg-info
 prune tests/tmp_out
 
-exclude *.*
+exclude *.{coverage*,git*,Python,xml,yml}
 exclude src/*/examples/*.png
 include src/microstructpy/examples/aluminum_micro.png
 exclude src/*/examples/*.txt
