--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -12,8 +12,8 @@ strategy:
   matrix:
     Python27:
       python.version: '2.7'
-    Python34:
-      python.version: '3.4'
+    # Python34:
+    #   python.version: '3.4'
     Python35:
       python.version: '3.5'
     Python36:
