--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -12,8 +12,8 @@ strategy:
   matrix:
     # Python34:
     #   python.version: '3.4'
-    Python35:
-      python.version: '3.5'
+    # Python35:
+    #  python.version: '3.5'
     Python36:
       python.version: '3.6'
     Python37:
