--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -16,13 +16,18 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install test dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install MeshPy
+      run: |
+        EXTRA_INSTALL="numpy pybind11"
+        curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/build-and-test-py-project.sh
+        . ./build-and-test-py-project.sh
     - name: Install package
       run: |
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install -e .
     - name: Lint with flake8
       run: |
