--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
+      max-parallel: 1
 
     steps:
     - uses: actions/checkout@v2
