--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6]
+        python-version: [3.6, 3.7]
       max-parallel: 1
 
     steps:
