--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -3,9 +3,10 @@ name: Python package
 on: [push]
 
 jobs:
-  build:
+  pytest:
 
-    runs-on: ubuntu-latest
+    runs-on:
+      matrix: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
@@ -33,3 +34,33 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+        
+  pytest-macOS:
+
+    runs-on:
+      matrix: macos-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    - name: Install test dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+    - name: Install package
+      run: |
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -e .
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 src tests setup.py --exclude=__init__.py --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 src tests setup.py --exclude=__init__.py --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Test with pytest
+      run: |
+        pytest
+  
