--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -5,8 +5,7 @@ on: [push]
 jobs:
   pytest:
 
-    runs-on:
-      matrix: ubuntu-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
