fixed another typo

--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -36,8 +36,7 @@ jobs:
         
   pytest-macOS:
 
-    runs-on:
-      matrix: macos-latest
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v2
