--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -50,6 +50,7 @@ jobs:
         pip install flake8 pytest
     - name: Install package
       run: |
+        brew install pkg-config
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install -e .
     - name: Lint with flake8
