--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -40,7 +40,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
@@ -62,4 +62,27 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+        
+  package-checks:
+
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    - name: Install check dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel check-manifest isort twine
+    - name: Check package import order
+      run: |
+        isort --verbose --check-only --diff --recursive src tests setup.py
+    - name: Check package contents
+      run: |
+        python setup.py sdist check --strict --metadata
+        check-manifest
+        twine check dist/*
+
   
