--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -104,5 +104,9 @@ jobs:
     - name: Install docs dependencies
       run: |
         python -m pip install -r docs/requirements.txt
+    - name: Install package
+      run: |
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -e .
     - name: Build ${{ matrix.doc-type }} documentation
       run: sphinx-build -Wnb ${{ matrix.doc-type }} docs/source/ docs/build-${{ matrix.doc-type }}/
