--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -86,4 +86,4 @@ jobs:
       run: |
         python setup.py sdist check --strict --metadata
         check-manifest
-        twine check dist/
+        twine check dist/*
