--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -1,4 +1,4 @@
-name: Python package
+name: CI
 
 on: [push]
 
@@ -49,7 +49,7 @@ jobs:
     - name: Install test dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 pytest coveralls
     - name: Install package
       run: |
         brew install pkg-config
@@ -63,7 +63,12 @@ jobs:
         flake8 src tests setup.py --exclude=__init__.py --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        pytest --cov=.
+    - name: Coveralls
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+      run: |
+        coveralls
         
   package-checks:
     name: package checks
