--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -20,7 +20,7 @@ jobs:
     - name: Install test dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest coveralls
+        pip install flake8 pytest pytest-cov coveralls
     - name: Install package
       run: |
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
