--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -78,7 +78,8 @@ jobs:
         pip install flake8 pytest
     - name: Install package
       run: |
-        if [-z pip list | grep -F matplotlib]; then brew install pkg-config; fi
+        # if [-z pip list | grep -F matplotlib]; then brew install pkg-config; fi
+        pip install freetype-py
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install -e .
     - name: Lint with flake8
