removed recusive from isort options, changed as of v5.0.0 of isort
https://github.com/timothycrosley/isort/blob/develop/CHANGELOG.md#500-penny---july-4-2020

--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -117,7 +117,7 @@ jobs:
         pip install setuptools wheel check-manifest isort twine
     - name: Check package import order
       run: |
-        isort --verbose --check-only --diff --recursive src tests setup.py
+        isort --verbose --check-only --diff src tests setup.py
     - name: Check package contents
       run: |
         python setup.py sdist check --strict --metadata
