--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -16,6 +16,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.7'
+    - name: Setup Linux Environment
+      run: |
+        sudo apt-get install libglu1
     - name: Install docs dependencies
       run: |
         python -m pip install -r docs/requirements.txt
@@ -24,10 +27,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install -e .
     - name: Build ${{ matrix.doc-type }} documentation
-      # there is an issue with gmsh on GitHub Actions
-      # it cannot be reproduced locally or on RTD
-      # See https://github.com/kip-hart/MicroStructPy/runs/1204718343?check_suite_focus=true#step:5:45
-      # this should be investigated at a later date
-      # in the meantime, an RTD webhook will be used to check docs builds
-      continue-on-error: true
       run: sphinx-build -Wnb ${{ matrix.doc-type }} docs/source/ docs/build-${{ matrix.doc-type }}/
