--- a/.github/workflows/python_package.yaml
+++ b/.github/workflows/python_package.yaml
@@ -75,11 +75,10 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
           ${{ runner.os }}-
-    - name: Install fortran
-      run: brew install gcc
     - name: Install test dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install setuptools wheel
         pip install flake8 pytest
     - name: Install package
       run: |
