--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,7 +7,7 @@ version: 2
 formats: all
 
 python:
-   version: 3.7
+   version: '3.10'
    install:
     - requirements: docs/requirements.txt
     - method: pip
