--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -32,7 +32,6 @@ jobs:
 
     - name: Define document path
       run: |
-        # Define Path to Documents
         if [ "${{ matrix.doc-type }}" = html ]; then echo "docs_path=docs/build-html" >> $GITHUB_ENV; fi
         if [ "${{ matrix.doc-type }}" = latex ]; then echo "docs_path=docs/build-latex" >> $GITHUB_ENV; fi
         if [ "${{ matrix.doc-type }}" = epub ]; then echo "docs_path=docs/build-epub" >> $GITHUB_ENV; fi
@@ -40,6 +39,19 @@ jobs:
     - name: LS document path
       run: |
         ls ${{ env.docs_path }}
+        
+    - name: Prepare documentation artifact
+      run: |
+        # Define Path to Upload
+        if [ "${{ matrix.doc-type }}" = html ]; then echo "art_path=docs/build-html" >> $GITHUB_ENV; fi
+        if [ "${{ matrix.doc-type }}" = latex ]; then echo "art_path=docs/build-latex" >> $GITHUB_ENV; fi
+        if [ "${{ matrix.doc-type }}" = epub ]; then echo "art_path=docs/build-epub/MicroStructPy.epub" >> $GITHUB_ENV; fi
+        
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: microstructpy_"${{ matrix.doc-type }}"_documentation
+        path: env.art_path
         
         
 
