--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -51,7 +51,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: microstructpy_"${{ matrix.doc-type }}"_documentation
-        path: env.art_path
+        path: ${{ env.art_path }}
         
         
 
