--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -50,7 +50,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
-        name: microstructpy_"${{ matrix.doc-type }}"_documentation
+        name: microstructpy_${{ matrix.doc-type }}_documentation
         path: ${{ env.art_path }}
         
         
