cd to latex doc

--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -49,8 +49,10 @@ jobs:
         
         # Build PDF
         if [ "${{ matrix.doc-type }}" = latex ]; then sudo apt install texlive-latex-recommended; fi
-        if [ "${{ matrix.doc-type }}" = latex ]; then pdflatex docs/build-latex/MicroStructPy.tex; fi
+        if [ "${{ matrix.doc-type }}" = latex ]; then cd docs/build-latex; fi
+        if [ "${{ matrix.doc-type }}" = latex ]; then pdflatex MicroStructPy.tex; fi
         if [ "${{ matrix.doc-type }}" = latex ]; then ls docs/build-latex; fi
+        if [ "${{ matrix.doc-type }}" = latex ]; then cd -; fi
         
         
     - name: Upload artifact
