--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -51,7 +51,7 @@ jobs:
         if [ "${{ matrix.doc-type }}" = latex ]; then sudo apt install texlive-latex-recommended; fi
         if [ "${{ matrix.doc-type }}" = latex ]; then cd docs/build-latex; fi
         if [ "${{ matrix.doc-type }}" = latex ]; then pdflatex MicroStructPy.tex; fi
-        if [ "${{ matrix.doc-type }}" = latex ]; then ls docs/build-latex; fi
+        if [ "${{ matrix.doc-type }}" = latex ]; then ls; fi
         if [ "${{ matrix.doc-type }}" = latex ]; then cd -; fi
         
         
