--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -47,11 +47,12 @@ jobs:
         if [ "${{ matrix.doc-type }}" = latex ]; then echo "art_path=docs/build-latex/MicroStructPy.pdf" >> $GITHUB_ENV; fi
         if [ "${{ matrix.doc-type }}" = epub ]; then echo "art_path=docs/build-epub/MicroStructPy.epub" >> $GITHUB_ENV; fi
         
-        # Build PDF
+        # Build PDF 
         if [ "${{ matrix.doc-type }}" = latex ]; then sudo apt install texlive-fonts-recommended; fi
         if [ "${{ matrix.doc-type }}" = latex ]; then sudo apt install texlive-latex-recommended; fi
         if [ "${{ matrix.doc-type }}" = latex ]; then sudo apt install texlive-lang-english; fi
         if [ "${{ matrix.doc-type }}" = latex ]; then sudo apt install texlive-xetex; fi
+        if [ "${{ matrix.doc-type }}" = latex ]; then sudo apt install latexmk; fi
         if [ "${{ matrix.doc-type }}" = latex ]; then cd docs/build-latex; fi
         if [ "${{ matrix.doc-type }}" = latex ]; then make; fi
         if [ "${{ matrix.doc-type }}" = latex ]; then ls; fi
